--- a/components/SocialLinks/SocialLinks.module.scss
+++ b/components/SocialLinks/SocialLinks.module.scss
@@ -6,7 +6,6 @@
   display: inline-block;
   width: 100%;
   padding: 0.5856em 1.1712em;
-  padding-left: 0;
   opacity: 0.9;
   font-size: 0.9em;
   letter-spacing: 1px;
@@ -17,4 +16,19 @@
   margin-top: -2px;
   margin-right: 0.55em;
   transition: all 0.4s ease;
+}
+
+.isSticky {
+  display: inline-block;
+  margin-bottom: 0.9212em;
+  @media (min-width: 600px) {
+    display: block;
+  }
+  a {
+    padding-left: 0.25em;
+    padding-right: 0.25em;
+    @media (min-width: 600px) {
+      padding: 0 1.1712em 0 .5em;
+    }
+  }
 }
