music album list and images formattings/layout

--- a/components/Album/AlbumList.module.scss
+++ b/components/Album/AlbumList.module.scss
@@ -20,7 +20,7 @@
   
 .listItem {
   padding-bottom: 0.5856em;
-  color: #ADADAD;
+  color: #c5c5c5;
   &:last-child {
     padding-bottom: 0;
   }
@@ -29,3 +29,6 @@
 .listItemInner {
   color: #E4E4E4;
 }
+
+
+// #c5c5c5
