--- a/components/Album/Album.module.scss
+++ b/components/Album/Album.module.scss
@@ -21,6 +21,10 @@
   }
 }
 
+.lastRowColFirst {
+  padding-top: 1.1712em;
+}
+
 .comingSoonMobileOnly {
   display: block;
   width: 100%;
@@ -39,4 +43,9 @@
     text-align: left;
     margin-bottom: 0;
   }
+}
+
+.description {
+  color: #E4E4E4;
+  line-height: 28px;
 }
