--- a/global.scss
+++ b/global.scss
@@ -115,7 +115,7 @@ img {
 }
 
 .container-small {
-  max-width: 900px;
+  max-width: 870px;
   margin: 0 auto;
 }
 
@@ -137,4 +137,8 @@ img {
 .include-bg-img .main-content {
   position: relative;
   z-index: 2;
+}
+
+blockquote p {
+  margin-bottom: 0;
 }
