--- a/global.scss
+++ b/global.scss
@@ -2,6 +2,7 @@
 @import './static/fonts/fontcustom';
 @import './icons.scss';
 @import './columns.scss';
+@import './burger-menu.scss';
 
 html,
 body {
@@ -142,3 +143,4 @@ img {
 blockquote p {
   margin-bottom: 0;
 }
+
