--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,13 +1,14 @@
 .header {
   position: fixed;
+  width: 100%;
   top: 0;
+  left: 0;
   z-index: 20;
   background: rgba(40,40,40,0.95);
   border-bottom: solid 3px #121212;
   box-shadow: 0 5px 12px #121212;
-}
-@media (min-width: 1040px) {
-  .header {
+  min-height: 50px;
+  @media (min-width: 1040px) {
     width: 110% !important;
     margin: 0 -5% !important;
     transform: skew(28.3deg);
