--- a/components/Album/Album.module.scss
+++ b/components/Album/Album.module.scss
@@ -1,3 +1,10 @@
+.container {
+  float: left;
+  clear: both;
+  width: 100%;
+  margin-bottom: 120px;
+}
+
 .colFirst,
 .colLast {
   @media (min-width: 768px) {
