--- a/components/Header/NavLink.module.css
+++ b/components/Header/NavLink.module.css
@@ -7,8 +7,10 @@
   padding: 1.1em 1.22em;
   font-size: 1.1em;
 }
+
 .navLink:hover,
-.navLink:focus {
+.navLink:focus,
+.navLinkActive {
   outline: 0 none;
   background: #121212;
   color: #fff;
