--- a/components/BlockQuote/BlockQuote.module.scss
+++ b/components/BlockQuote/BlockQuote.module.scss
@@ -12,6 +12,7 @@
     padding: 2.3424em 1.1712em;
   }
 }
+
 .copy {
   width: 80%;
   vertical-align: baseline;
@@ -69,6 +70,7 @@
 .author {
   font-size: 0.75em;
 }
+
 .copy {
   text-align: left;
   width: 100%;
@@ -104,4 +106,48 @@
 .author {
   margin-left: 6.5%;
   clear: both;
+}
+
+
+.blockquoteLarge {
+  color: #C5C5C5;
+  position: relative;
+  margin-bottom: 3.5136em;
+  @media (min-width: 600px) {
+    font-size: 1.2em;
+  }
+
+  .quote {
+    font-size: 5em;
+  }
+
+  .inner,
+  .author {
+    font-size: inherit;
+  }
+
+  .copy {
+    text-align: center;
+  }
+
+  p {
+    margin-bottom: 2.3424em;
+    &:last-child {
+      margin-bottom: 1.1712em;
+    }
+  }
+
+  .quoteFirst {
+    text-align: right;
+  }
+  .quoteLast {
+    position: absolute;
+    bottom: 80px;
+    right: 50px;
+  }
+
+  .author {
+    text-align: center;
+    color: #E4E4E4;
+  }
 }
