--- a/global.scss
+++ b/global.scss
@@ -82,10 +82,31 @@ h4 {
 
 h2 {
   color: #E4E4E4;
-  letter-spacing: 2px;
-  text-transform: uppercase;
   font-weight: 300;
-  margin-bottom: 0.5856em;
+  text-align: center;
+  padding-bottom: 1.1712em;
+  font-size: 1.9em;
+
+  @media (min-width: 768px) {
+    font-size: 2.3em;
+  }
+
+  @media (min-width: 1040px) {
+    margin-bottom: 1.1712em;
+  }
+
+  &.uppercase {
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin-bottom: 0.5em;
+    padding-bottom: 0;
+    font-size: 1.3em;
+    text-align: left;
+
+    @media (min-width: 768px) {
+      font-size: 1.5em;
+    }
+  }
 }
 
 p {
@@ -94,7 +115,8 @@ p {
 }
 
 p > b {
-  font-weight: bold;
+  font-weight: 300;
+  color: #FFF;
 }
 
 a {
@@ -157,6 +179,11 @@ img {
 
 .container-small {
   max-width: 870px;
+  margin: 0 auto;
+}
+
+.container-large {
+  max-width: 970px;
   margin: 0 auto;
 }
 
