--- a/global.scss
+++ b/global.scss
@@ -197,7 +197,7 @@ img {
   text-align: center;
 }
 
-.include-bg-img .img-bg {
+.with-page-bg-img .page-img-bg {
   position: fixed;
   top: 0;
   right: 0;
@@ -205,8 +205,16 @@ img {
   left: 0;
   margin: 0 auto;
   z-index: 1;
+  &.black-white-and-a-little-bit-of-grey {
+    display: none;
+    @media (min-width: 1000px) {
+      display: block;
+      right: -84%;
+      max-width: 1200px;
+    }
+  }
 }
-.include-bg-img .main-content {
+.with-page-bg-img .main-content {
   position: relative;
   z-index: 2;
 }
