--- a/components/BlockQuote/BlockQuote.module.scss
+++ b/components/BlockQuote/BlockQuote.module.scss
@@ -112,7 +112,7 @@
 .blockquoteLarge {
   color: #C5C5C5;
   position: relative;
-  margin-bottom: 3.5136em;
+  margin-bottom: 6em;
   @media (min-width: 600px) {
     font-size: 1.2em;
   }
@@ -149,5 +149,6 @@
   .author {
     text-align: center;
     color: #E4E4E4;
+    margin-left: 0;
   }
 }
