--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -24,16 +24,31 @@
   padding-right: 40px;
   min-width: 319px;
   max-width: 319px;
-  padding: 2.5em 1.7568em 1.5em 2.5em;
+  padding: 2.5em 1.7568em 1.5em 0;
   background: #0B0B0B;
+}
+
+.heading {
+  padding-left: 0.5856em;
+}
+
+.emailUpdatesHeading {
+  margin-top: 2em;
+  padding-left: 1.3em;
+}
+
+.emailUpdatesLink {
+  font-size: 1.2em;
+  letter-spacing: 1px;
 }
 
 .privacyPolicyLink {
   opacity: 0.5;
-  font-size: 0.9em;
+  font-size: 0.85em;
   letter-spacing: 1px;
   transition: all 0.3s ease;
   text-align: right;
-  margin-top: 4em;
+  margin-top: 5em;
+  margin-bottom: 0;
   padding: 0 1.1712em;
 }
