--- a/burger-menu.scss
+++ b/burger-menu.scss
@@ -59,6 +59,12 @@
   letter-spacing: 1px;
 }
 
+.bm-link-active {
+  outline: 0 none;
+  background: #121212;
+  color: #FFF;
+}
+
 .bm-overlay {
   background: rgba(0, 0, 0, 0.6);
   @media(min-width: 1040px) {
