--- a/components/Album/Album.module.scss
+++ b/components/Album/Album.module.scss
@@ -2,23 +2,16 @@
   float: left;
   clear: both;
   width: 100%;
-  margin-bottom: 120px;
+  margin-bottom: 80px;
+  @media (min-width: 768px) {
+    margin-bottom: 120px;
+  }
 }
 
 .colFirst,
 .colLast {
   @media (min-width: 768px) {
     padding-bottom: 2.3424em;
-  }
-}
-
-.colFirst {
-  img {
-    margin-bottom: 1.1712em;
-    @media (min-width: 768px) {
-      margin-bottom: 0;
-      box-shadow: 0 3px 22px #121212;
-    }
   }
 }
 
@@ -30,6 +23,26 @@
 
 .lastRowColFirst {
   padding-top: 1.1712em;
+}
+
+.albumHeading {
+  color: #FFF;
+}
+
+.albumHeadingMobile {
+  text-align: center;
+  margin-bottom: 1.5em;
+  font-size: 1.8em;
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.albumHeadingDesktop {
+  display: none;
+  @media (min-width: 768px) {
+    display: block;
+  }
 }
 
 .comingSoonMobileOnly {
@@ -52,11 +65,46 @@
   }
 }
 
+.image {
+  max-width: 500px;
+  margin: 0 auto 2.3424em auto; 
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+    box-shadow: 0 3px 22px #121212;
+  }
+}
+
+.ctaLinksContainer {
+  margin-bottom: 2.3424em;
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+  }
+}
+
 .description {
   color: #E4E4E4;
   line-height: 28px;
 }
 
 .audioCdLink {
-  margin-bottom: 2.3424em;
+  text-align: center;
+  margin-bottom: 3em;
+  @media (min-width: 768px) {
+    text-align: left;
+    margin-bottom: 2.3424em;
+  }
+}
+
+.trackListNote {
+  margin-top: -1.1712em;
+  @media (min-width: 768px) {
+    margin-top: 0;
+  }
+}
+
+.writtenBy {
+  text-align: center;
+  @media (min-width: 768px) {
+    text-align: left;
+  }
 }
