--- a/components/Album/AlbumQuotes.module.scss
+++ b/components/Album/AlbumQuotes.module.scss
@@ -1,3 +1,10 @@
+.container {
+  display: none;
+  @media (min-width: 768px) {
+    display: block;
+  }
+}
+
 .listItem {
   margin-bottom: 4.6848em;
 }
