--- a/components/Album/AlbumTextList.module.scss
+++ b/components/Album/AlbumTextList.module.scss
@@ -1,20 +1,35 @@
 .container {
+  margin-bottom: 2.3424em;
+  @media (min-width: 768px) {
+    margin-bottom: 1.1712em;
+  }
+}
+
+.heading {
+  font-size: 1.3em;
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.list {
   clear: both;
   padding-left: 1.1712em;
-  color: #fff;
   clear: both;
-  background: #080808;
   color: #E4E4E4;
   padding: 1.1712em;
-  margin: 0 -1.1712em;
   padding-left: 2.3424em;
 }
 
-.containerOl {
+.listWithBackground {
+  background: #080808;
+}
+
+.listOl {
    list-style-type: number;
 }
 
-.containerDl {
+.listDl {
    list-style-type: square;
 }
   
@@ -29,6 +44,3 @@
 .listItemInner {
   color: #E4E4E4;
 }
-
-
-// #c5c5c5
