--- a/burger-menu.scss
+++ b/burger-menu.scss
@@ -53,7 +53,7 @@
 .bm-link {
   display: inline-block;
   width: 100%;
-  padding: .6em 15px .6em 12px;
+  padding: .625em 15px .625em 12px;
   color: #E7E7E7;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -66,7 +66,7 @@
 }
 
 .bm-overlay {
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.7) !important;
   @media(min-width: 1040px) {
     display: none;
   }
