--- a/components/StickySocialLinks/StickySocialLinks.module.scss
+++ b/components/StickySocialLinks/StickySocialLinks.module.scss
@@ -1,11 +1,13 @@
 .container {
-  top: 70px;
-  left: 0;
+  margin-top: 60px;
+  margin-bottom: 1.1712em;
   z-index: 3;
   text-align: center;
   @media (min-width: 600px) {
     position: fixed;
     top: 100px;
+    margin-top: 0;
+    left: 0;
   }
   @media (min-width: 768px) {
     top: 155px;
