--- a/styles/burger-menu.scss
+++ b/styles/burger-menu.scss
@@ -37,6 +37,8 @@
 
 .bm-menu-wrap {
   position: fixed;
+  top: 0 !important;
+  left: 0 !important;
   height: 100%;
   transition: all 0.2s ease 0s !important;
   @media(min-width: 1040px) {
@@ -66,6 +68,8 @@
 }
 
 .bm-overlay {
+  top: 0 !important;
+  left: 0 !important;
   background: rgba(0, 0, 0, 0.7) !important;
   @media(min-width: 1040px) {
     display: none;
