--- a/components/SocialLinks/SocialLinks.module.scss
+++ b/components/SocialLinks/SocialLinks.module.scss
@@ -6,10 +6,18 @@
   display: inline-block;
   width: 100%;
   padding: 0.5856em 1.1712em;
-  opacity: 0.9;
+  opacity: 1;
   font-size: 0.9em;
   letter-spacing: 1px;
   transition: all 0.3s ease;
+
+  &:hover,
+  &:focus,
+  &:active {
+    .listItemIcon {
+      transform: rotate(360deg);
+    }
+  }
 }
 
 .listItemIcon {
@@ -24,12 +32,24 @@
   @media (min-width: 600px) {
     display: block;
   }
-  a {
+
+  .listItemLink {
     padding-left: 0.25em;
     padding-right: 0.25em;
     @media (min-width: 600px) {
       padding: 0 1.1712em 0 .5em;
+      opacity: .8;
     }
+
+    &:hover,
+    &:focus,
+    &:active {
+      opacity: 1;
+      .listItemIcon {
+        transform: rotate(360deg);
+      }
+    }
+
   }
   .text {
     display: none;
