--- a/components/StickySocialLinks/StickySocialLinks.module.scss
+++ b/components/StickySocialLinks/StickySocialLinks.module.scss
@@ -5,6 +5,7 @@
   text-align: center;
   @media (min-width: 600px) {
     position: fixed;
+    z-index: 4;
     top: 100px;
     margin-top: 0;
     left: 0;
