--- a/styles/icons.scss
+++ b/styles/icons.scss
@@ -8,7 +8,7 @@
 .icon-read,
 .icon-phone {
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
   width: 28px;
   height: 28px;
   font-size: 1em;
@@ -32,6 +32,8 @@
 }
 .icon-ssp::before {
   margin-left: 1px;
+  position: relative;
+  top: -2px;
 }
 .icon-s-t {
   background: #1ebced;
