--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -4,6 +4,10 @@ h1,h2,h3,h4,h5 {
   font-weight: 300;
 }
 
+h1 {
+  margin-bottom: 2.3424em;
+}
+
 h2 {
   text-align: center;
   padding-bottom: 1.1712em;
