--- a/components/Album/DownloadLinks.module.scss
+++ b/components/Album/DownloadLinks.module.scss
@@ -28,6 +28,9 @@
   }
   @media (min-width: 768px) {
     float: left;
+    width: 125px;
+  }
+  @media (min-width: 775px) {
     width: 130px;
   }
   @media (min-width: 868px) {
