--- a/components/Album/Album.module.scss
+++ b/components/Album/Album.module.scss
@@ -23,9 +23,9 @@
   }
 }
 
-.lastRowColFirst {
-  padding-top: 1.1712em;
-}
+// .lastRowColFirst {
+//   padding-top: 1.1712em;
+// }
 
 .albumHeading {
   color: #FFF;
