--- a/components/Album/AlbumTextList.module.scss
+++ b/components/Album/AlbumTextList.module.scss
@@ -12,6 +12,15 @@
   }
 }
 
+.headingAlways {
+  display: block;
+  margin-bottom: 1em;
+  @media (min-width: 768px) {
+    font-size: 1.2em;
+    padding-top: 1em;
+  }
+}
+
 .list {
   clear: both;
   padding-left: 1.1712em;
