--- a/components/Album/Album.module.scss
+++ b/components/Album/Album.module.scss
@@ -5,27 +5,23 @@
   clear: both;
   width: 100%;
   margin-bottom: 80px;
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     margin-bottom: 120px;
   }
 }
 
 .colFirst,
 .colLast {
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     padding-bottom: 2.3424em;
   }
 }
 
 .colLast {
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     padding-left: 2.3424em;
   }
 }
-
-// .lastRowColFirst {
-//   padding-top: 1.1712em;
-// }
 
 .albumHeading {
   color: #FFF;
@@ -35,14 +31,14 @@
   text-align: center;
   margin-bottom: 1.5em;
   font-size: 1.8em;
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     @include hidden;
   }
 }
 
 .albumHeadingDesktop {
   @include hidden;
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     display: block;
     position: relative;
     clip: initial;
@@ -58,14 +54,14 @@
   width: 100%;
   text-align: center;
   margin-bottom: 1.1712em;
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     display: none;
   }
 }
 
 .comingSoonDesktopOnly {
   display: none;
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     display: block;
     width: 100%;
     text-align: left;
@@ -76,7 +72,7 @@
 .image {
   max-width: 500px;
   margin: 0 auto 2.3424em auto; 
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     margin-bottom: 0;
     box-shadow: 0 3px 22px #121212;
   }
@@ -84,7 +80,7 @@
 
 .ctaLinksContainer {
   margin-bottom: 2.3424em;
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     margin-bottom: 0;
   }
 }
@@ -96,8 +92,9 @@
 
 .audioCdLink {
   text-align: center;
-  margin-bottom: 3em;
-  @media (min-width: 768px) {
+  margin-top: 1.5em;
+  margin-bottom: 4em;
+  @media (min-width: 850px) {
     text-align: left;
     margin-bottom: 2.3424em;
   }
@@ -105,14 +102,14 @@
 
 .trackListNote {
   margin-top: -1.1712em;
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     margin-top: 0;
   }
 }
 
 .writtenBy {
   text-align: center;
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     text-align: left;
   }
 }
