--- a/components/Album/DownloadLinks.module.scss
+++ b/components/Album/DownloadLinks.module.scss
@@ -5,17 +5,19 @@
   margin: 0 auto 2.3424em auto;
   @media (min-width: 600px) {
     text-align: center;
+    max-width: 600px;
   }
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     text-align: left;
-    max-width: 322px;
     max-width: 100%;
-    margin-bottom: 0;
+    margin-top: 1.1712em;
   }
 }
 
 .listItem {
-  margin: 1.1712em auto;
+  margin-right: auto;
+  margin-bottom: 1.5em;
+  margin-left: auto;
   max-width: 200px;
   clear: both;
   width: 100%;
@@ -24,24 +26,21 @@
     vertical-align: middle;
     clear: none;
     margin-right: 1em;
+    margin-bottom: .9em;
   }
-  @media (min-width: 768px) {
+  @media (min-width: 850px) {
     float: left;
-    width: 125px;
-  }
-  @media (min-width: 785px) {
-    width: 130px;
-    margin-right: .8em;
-  }
-  @media (min-width: 868px) {
-    width: 149px;
+    width: 45%;
+    &:nth-child(odd) {
+      clear: both;
+    }
   }
 
   a {
     opacity: 1;
     transition: all 0.2s ease;
-    @media (min-width: 768px) {
-      opacity: .75;
+    @media (min-width: 850px) {
+      opacity: .8;
     }
     &:hover,
     &:focus {
@@ -51,33 +50,48 @@
   }
 }
 
-.listItemItunesPreOrder {
-  width: 170px;
-  max-width: 170px;
-  float: none;
-  margin-top: 1.1712em;
-  margin-right: auto;
-  margin-left: auto;
-  @media (min-width: 768px) {
-    float: left;
-    width: 179px;
-    max-width: 179px;
+.listItemYouTubeMusic {
+  @media (min-width: 600px) {
+    margin-top: -.9em;
   }
-  a {
-    opacity: 1;
+  @media (min-width: 850px) {
+    margin-top: 0;
   }
 }
 
 .listItemAmazon {
-  clear: both;
   @media (min-width: 500px) {
-    clear: none;
+    margin-bottom: 1.5em;
   }
-  @media (min-width: 768px) {
-    margin-bottom: 2.3424em;
+  @media (min-width: 600px) {
+    margin-top: .4em;
+    margin-bottom: 2.4em;
   }
+
+  @media (min-width: 850px) {
+    margin-top: 0;
+    margin-bottom: 1.5em;
+  }
+ 
   img {
     border-radius: 8px;
-    border: solid 1px #FFF;
+    border: solid 1px #CCC;
+  }
+}
+
+.listItemBandCamp {
+  margin-top: -.7em;
+  @media (min-width: 850px) {
+    margin-top: 0;
+  }
+}
+
+.listItemSpotify {
+  margin-bottom: 1.6em;
+  @media (min-width: 600px) {
+  }
+  @media (min-width: 850px) {
+    margin-bottom: 1.5em;
+    
   }
 }
