--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   z-index: 20;
-  background: rgba(40,40,40,0.95);
+  background: #282828;
   border-bottom: solid 3px #121212;
   box-shadow: 0 5px 12px #121212;
   min-height: 50px;
