--- a/styles/columns.scss
+++ b/styles/columns.scss
@@ -4,3 +4,81 @@
     width: 50%;
   }
 }
+
+.grid-layout-4-4 {
+ li {
+    @media (min-width: 600px) {
+      padding: 0.5856em;
+    }
+    @media (min-width: 600px) {
+      padding: 1.1712em;
+    }
+  }
+}
+
+.col-50-xs {
+  @media (max-width: 768px) {
+    float: left;
+    width: 50%;
+  }
+}
+
+.col-hover {
+  max-height: 130px;
+  overflow: hidden;
+  height: 130px;
+  cursor: pointer;
+  @media (min-width: 350px) {
+    max-height: 170px;
+    height: 170px;
+  }
+  @media (min-width: 450px) {
+    height: 185px;
+    max-height: 185px;
+  }
+  @media (min-width: 500px) {
+    height: 230px;
+    max-height: 230px;
+  }
+  @media (min-width: 600px) {
+    height: 210px;
+    max-height: 210px;
+  }
+  @media (min-width: 768px) {
+    height: 170px;
+    max-height: 170px;
+  }
+  @media (min-width: 868px) {
+    height: 190px;
+    max-height: 190px;
+  }
+  @media (min-width: 1000px) {
+    height: 200px;
+    max-height: 200px;
+  }
+  @media (min-width: 1100px) {
+    height: 210px;
+    max-height: 210px;
+  }
+  @media (min-width: 1170px) {
+    height: 225px;
+    max-height: 225px;
+  }
+  > img {
+    width: 100%;
+    transition: all 0.3s ease;
+  }
+
+  a {
+    display: block;
+    opacity: .8;
+    &:hover {
+      opacity: 1;
+      img {
+        width: 105%;
+        max-width: 105%;
+        margin: -2.5% 0 0 -2.5%;
+      }
+    }
+  }
+}
