--- a/components/JournalismList/JournalismList.module.scss
+++ b/components/JournalismList/JournalismList.module.scss
@@ -6,6 +6,7 @@
   @media (min-width: 600px) {
     height: 250px;
     max-height: 250px;
+    max-width: 250px;
   }
   @media (min-width: 768px) {
     display: inline-block;
@@ -71,10 +72,6 @@
       opacity: 1;
     }
   }
-}
-
-.listItemInnerHoverContent {
-  
 }
 
 .title {
