--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -2,12 +2,18 @@
 
 h1,h2,h3,h4,h5 {
   margin-top: 0;
-  color: #E4E4E4;
+  color: #FFF;
   font-weight: 300;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
 
 h1 {
-  margin-bottom: 2.3424em;
+  margin-bottom: 1.1712em;
+  font-size: 1.9em;
+  @media (min-width: 768px) {
+    font-size: 2.3em;
+  }
 }
 
 h2 {
@@ -24,13 +30,12 @@ h2 {
   }
 }
 
-.heading-uppercase {
+.heading-uppercase-small {
   letter-spacing: 2px;
   text-transform: uppercase;
   margin-bottom: 0.5em;
   padding-bottom: 0;
   font-size: 1.3em;
-  text-align: left;
 
   @media (min-width: 768px) {
     font-size: 1.5em;
@@ -92,7 +97,10 @@ p.page-heading {
   }
 }
 
-
 blockquote p {
   margin-bottom: 0;
+}
+
+.text-align-center {
+  text-align: center;
 }
