--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -10,11 +10,23 @@
   width: 1px; 
 }
 
+@mixin h3 {
+  font-size: 1.4em;
+  margin-bottom: 0.5em;
+  color: #fff;
+
+  @media (min-width: 500px) {
+    font-size: 1.5em;
+  }
+
+  @media (min-width: 600px) {
+    font-size: 1.7em;
+  }
+}
 
 @mixin h4 {
   font-size: 1.7em;
   margin-bottom: 0.5em;
-  letter-spacing: 1px;
   color: #fff;
 
   @media (min-width:768px) {
