--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -42,8 +42,16 @@ h2 {
   }
 }
 
+h3 {
+  @include h3;
+}
+
 h4 {
   @include h4;
+}
+
+.h3-size {
+  @include h3;
 }
 
 a {
@@ -56,6 +64,7 @@ a {
     &:focus,
     &:active {
       border-bottom-color: #757575;
+      color: #FFF;
     }
   }
 }
@@ -108,6 +117,10 @@ blockquote span {
 
 .text-align-center {
   text-align: center;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
 }
 
 .highlight,
