--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,6 +5,7 @@
 @import './columns.scss';
 @import './burger-menu.scss';
 @import './form.scss';
+@import './button.scss';
 @import './layout.scss';
 @import './mixins.scss';
 
