--- a/components/PageButtonLink/PageButtonLink.module.scss
+++ b/components/PageButtonLink/PageButtonLink.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   text-align: center;
   margin-bottom: 1.7568em;
+  margin-top: 4em;
 }
 
 .link {
@@ -13,6 +14,7 @@
   line-height: normal;
   text-align: left;
   letter-spacing: 1px;
+  font-size: 1.3em;
   @media (min-width: 600px) {
     display: inline-block;
     margin: 0 auto;
