--- a/styles/columns.scss
+++ b/styles/columns.scss
@@ -1,3 +1,17 @@
+.col-25-md {
+  @media (min-width: 768px) {
+    float: left;
+    width: 25%;
+  }
+}
+
+.col-50-xs {
+  @media (max-width: 768px) {
+    float: left;
+    width: 50%;   
+  }
+}
+
 .col-50-md {
   @media (min-width: 850px) {
     float: left;
@@ -71,13 +85,32 @@
 
   a {
     display: block;
-    opacity: .8;
+    opacity: .9;
+    transition: all 0.6s ease;
+    img {
+      transition: all 0.3s ease;
+    }
     &:hover {
       opacity: 1;
       img {
         width: 105%;
         max-width: 105%;
         margin: -2.5% 0 0 -2.5%;
+      }
+    }
+  }
+
+
+  > .row > div {
+    @media (min-width: 768px) {
+      &:hover {
+        .box-heading {
+          background-color: rgba(0, 0, 0, 0.22);
+        }
+        ul {
+          opacity: 1;
+          color: #FFF;
+        }
       }
     }
   }
