--- a/components/PageButtonLink/PageButtonLink.module.scss
+++ b/components/PageButtonLink/PageButtonLink.module.scss
@@ -6,6 +6,10 @@
   margin-top: 4em;
 }
 
+.alignLeft {
+  text-align: left;
+}
+
 .link {
   clear: both;
   width: auto;
@@ -46,3 +50,24 @@
   transition: all 0s ease;
   height: 27px;
 }  
+
+.subText {
+  color: #D0D0D0;
+  letter-spacing: 0;
+}
+
+.footerLink {
+  margin-left: 1.8em;
+  margin-top: 0.5856em;
+  padding-right: 0;
+  padding-bottom: 2px;
+  font-size: 1em;
+  color: #D0D0D0;
+  border-bottom: solid 1px #9F9F9F;
+  &:hover,
+  &:focus,
+  &:active {
+    border-bottom-color: #FFF;
+    color: #FFF;
+  }
+}
