--- a/styles/global.scss
+++ b/styles/global.scss
@@ -73,3 +73,21 @@ iframe {
     display: block;
   }
 }
+
+
+// news styles for hard coded HTML
+// originates from original news JSON/generated HTML
+.image-max-width-400 {
+  max-width: 400px;
+}
+.image-max-width-500 {
+  max-width: 500px;
+}
+.image-max-width-600 {
+  display: block;
+  max-width: 600px;
+}
+.image-max-width-700 {
+  display: block;
+  max-width: 700px;
+}
