--- a/pages/music/Music.module.scss
+++ b/pages/music/Music.module.scss
@@ -1,8 +1,28 @@
 .listItem {
-  float: left;
-  width: 50%;
   padding: 1em;
-  &:nth-child(odd) {
-    clear: both;
+  max-width: 450px;
+  margin: 0 auto;
+  @media (min-width: 900px) {
+    float: left;
+    width: 50%;
+    margin: 0;
+    &:nth-child(odd) {
+      clear: both;
+    }
   }
+}
+
+.listItemLink {
+  @media (min-width: 768px) {
+    &:hover,
+    &:focus {
+      .image {
+        transform: scale(1.050);
+      }
+    }
+  }
+}
+
+.image {
+  transition: all .4s ease;
 }
