--- a/styles/global.scss
+++ b/styles/global.scss
@@ -16,7 +16,7 @@ body {
 }
 
 body {
-  background: #000;
+  background: #0A0A0A;
   color: #C5C5C5;
   height: 100%;
   font-family: Source Sans Pro, Arial,sans-serif;
