--- a/components/HomePageQuote/HomePageQuote.module.scss
+++ b/components/HomePageQuote/HomePageQuote.module.scss
@@ -1,21 +1,20 @@
 .blockquote {
   position: relative;
   padding: 0;
-  text-align: center;
   font-size: 1.1em;
   margin-right: 0;
   margin-bottom: 2.3424em;
   margin-left: 0;
   line-height: 1.7em;
-  @media (min-width: 500px) {
-    margin-left: -2em;
-  }
   @media (min-width: 600px) {
-    margin: 0 0 1em 0;
+    margin: 0 0 2em 1em;
   }
   @media (min-width: 768px) {
     text-align: center;
     margin-left: 0;
+  }
+  @media (min-width: 850px) {
+    margin-bottom: 1em;
   }
   @media (min-width: 1000px) {
     font-size: 1.4em;
@@ -38,13 +37,13 @@
   color: #fff;
   line-height: 1.72em;
   text-align: left;
-  width: 76%;
+  width: 92%;
   font-size: 1.1em;
   font-style: italic;
   @media (min-width: 600px) {
     text-align: left;
     margin-left: -39px;
-    padding: 0px 5px;
+    padding: 0 5px 0 20px;
     width: 91%;
   }
   @media (min-width: 1000px) {
@@ -61,10 +60,13 @@
   margin-left: -4px;
   line-height: 2.3em;
   text-align: left;
-  padding-left: 15.5%;
+  padding-left: 30px;
   display: block;
   @media (min-width: 600px) {
-    padding-left: 5%;
+    padding-left: 10px;
+  }
+  @media (min-width: 768px) {
+    padding-left: 35px;
   }
   @media (min-width: 1000px) {
     display: inline-block;
@@ -81,10 +83,11 @@
 
 .quoteFirst {
   margin-left: 0;
-  top: 5px;
+  top: -10px;
   left: -20px;
   font-size: 4em;
   @media (min-width: 600px) {
+    top: -5px;
     left: -9%;
   }
   @media (min-width: 768px) {
