--- a/components/Gallery/ArrowNavButtons.module.scss
+++ b/components/Gallery/ArrowNavButtons.module.scss
@@ -7,6 +7,10 @@
   margin: auto 0;
   background: 0;
   border: 0;
+  &:hover,
+  &:focus {
+    background: none;
+  }
 }
 
 .previousButton {
@@ -31,7 +35,7 @@
 }
 
 .arrowLine {
-  background: #C5C5C5;
+  background: #FFF;
   position: absolute;
   width: 3px;
   height: 32px;
