--- a/components/Gallery/CloseButton.module.scss
+++ b/components/Gallery/CloseButton.module.scss
@@ -19,6 +19,10 @@
   font-size: 0;
   background: transparent;
   cursor: pointer;
+  &:hover,
+  &:focus {
+    background: none;
+  }
 }
 
 .spanContainer {
@@ -28,7 +32,7 @@
 }
 
 .span {
-  background: #C5C5C5;
+  background: #FFF;
   position: absolute;
   width: 3px;
   height: 32px;
