--- a/components/Gallery/GalleryModal.module.scss
+++ b/components/Gallery/GalleryModal.module.scss
@@ -1,5 +1,5 @@
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -13,7 +13,7 @@
 .overlayContent {
     position: relative;
     background: 0;
-    padding: 5em;
+    padding: 0;
     inset: 0;
     border: 0;
     height: 100%;
@@ -25,14 +25,31 @@
   display: flex;
   width: 100%;
   height: 100%;
+  > div {
+    width: 100%;
+  }
 }
 
 .swipeableImageOverlay {
   height: 100%;
   width: 100%;
   position: absolute;
-  z-index: 99999;
+  z-index: 50;
   top: 0;
+}
+
+.photoCredit {
+  width: 100%;
+  position: fixed;
+  z-index: 49;
+  bottom: 0;
+  background: #282828;
+  padding: 1em;
+  p {
+    margin: 0;
+    font-weight: bold;
+    color: #FFF;
+  }
 }
 
 .modalImageListItem {
@@ -47,4 +64,13 @@
   margin: auto;
   border: solid 3px #FFF;
   max-height: calc(100vh - 10em);
+  opacity: 1;
+  pointer-events: none;
+  user-select: none;
+  position: relative;
+  z-index: -1;
+}
+
+.modalImageHidden {
+  opacity: 0;
 }
