--- a/components/Gallery/GalleryModal.module.scss
+++ b/components/Gallery/GalleryModal.module.scss
@@ -69,5 +69,9 @@
   user-select: none;
   position: relative;
   z-index: -1;
+  max-width: 90%;
+  @media (min-width: 768px) {
+    max-width: 100%;
+  }
 }
 
