--- a/components/Gallery/GalleryModal.module.scss
+++ b/components/Gallery/GalleryModal.module.scss
@@ -63,6 +63,7 @@
 .modalImage {
   margin: auto;
   border: solid 3px #FFF;
+  width: auto;
   max-height: calc(100vh - 10em);
   opacity: 1;
   pointer-events: none;
