--- a/components/GigsList/GigsList.module.scss
+++ b/components/GigsList/GigsList.module.scss
@@ -60,3 +60,11 @@
     margin-bottom: 0;
   }
 }
+
+.button {
+  width: 100%;
+  text-align: center;
+  @media (min-width: 500px) {
+    width: auto;
+  }
+}
