--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -74,4 +74,7 @@
 .findOutMore {
   font-size: 1.3em;
   word-break: break-all;
+  max-width: 450px;
+  margin: 0 auto;
+  display: inline-block;
 }
