--- a/styles/global.scss
+++ b/styles/global.scss
@@ -9,6 +9,7 @@
 @import './layout.scss';
 @import './mixins.scss';
 @import './cookie-consent.scss';
+@import './categories-list.scss';
 
 html,
 body {
