--- a/components/ExternalLinksList/ExternalLinksList.module.scss
+++ b/components/ExternalLinksList/ExternalLinksList.module.scss
@@ -1,44 +1,90 @@
 .list {
   display: flex;
-  width: 100%;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+  width: 110%;
+  margin: 0 -5%;
+  @media (min-width: 600px) {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .listItem {
-  width: 50%;
-  padding: 1em;
-  margin-bottom: 1em;
-  &:nth-child(odd) {
-    padding-right: 1.5em
+  width: 100%;
+  padding: 0;
+  margin-bottom: 4em;
+
+  @media (min-width: 500px) {
+    margin-bottom: 3em;
+  }
+  
+  @media (min-width: 1000px) {
+    padding: 1em;
+    margin-bottom: 1em;
   }
 
-  &:nth-child(even) {
-    padding-left: 1.5em
+  @media (min-width: 850px) {
+    width: 50%;
+    &:nth-child(odd) {
+      padding-right: 1.5em
+    }
+
+    &:nth-child(even) {
+      padding-left: 1.5em
+    }
   }
 }
 
 .link {
-  display: flex;
+  display: block;
   width: 100%;
   height: 100%;
-  flex-direction: row;
-  background: #2A2A2A;
+  @media (min-width: 500px) {
+    background: #2A2A2A;
+  }
+  @media (min-width: 850px) {
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .imageColumn {
-  max-width: 150px;
-  max-height: 155px;
+  min-width: 120px;
+  max-width: 120px;
+  max-height: 100%;
   overflow: hidden;
+  float: left;
+  margin-right: 1.5em;
+  @media (min-width: 850px) {
+    float: none;
+    display: flex;
+    width: 100%;
+    min-width: 150px;
+    max-width: 150px;
+    max-height: 100%;
+    margin-right: 0;
+  }
 } 
 
 .copyColumn {
-  padding: 1em 1em 1em 1.5em;
+  padding: 0;
+  @media (min-width: 500px) {
+    padding: 1em;
+  }
+  @media (min-width: 1000px) {
+    padding: 1em 1em 1em 1.5em;
+    text-align: left;
+  }
 }
 
 .title {
   margin-bottom: 0;
+  font-size: 1.1em;
+  @media (min-width: 1000px) {
+    font-size: 1.4em;
+  }
 }
 
 .excerpt {
