chore(deps): bump dependencies

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
-@import './static/fonts/fontcustom';
+@import '../public/fonts/fontcustom';
 @import './typography.scss';
 @import './icons.scss';
 @import './columns.scss';
