--- a/components/SocialLinks/SocialLinks.module.scss
+++ b/components/SocialLinks/SocialLinks.module.scss
@@ -45,9 +45,18 @@
   .listItemLink {
     padding-left: 0.25em;
     padding-right: 0.25em;
+
+    &.iconTtLink {
+      padding-right: .5em;
+    }
+
     @media (min-width: 600px) {
       padding: 0 1.1712em 0 .5em;
       opacity: .8;
+
+      &.iconTtLink {
+        padding-left: 0;
+      }
     }
 
     &:hover,
@@ -63,5 +72,23 @@
   }
   .text {
     display: none;
+  }
+}
+
+.iconThr {
+  vertical-align: bottom;
+  // margin-bottom: .3em;
+}
+
+.iconBs {
+  vertical-align: bottom;
+  // margin-bottom: .5em;
+  position: relative;
+  top: 5px;
+  padding-right: .5em;
+  padding-left: .5em;
+  @media (min-width: 600px) {
+    padding-right: 0;
+    padding-left: 0;
   }
 }
