style(about): content updates

--- a/components/MemberOfList/MemberOfList.module.scss
+++ b/components/MemberOfList/MemberOfList.module.scss
@@ -10,6 +10,13 @@
   }
 }
 
+.theRecordingAcademy {
+  display: block;
+  min-width: 180px;
+  background: #FFF;
+  padding: 1em;
+}
+
 .listItemLink {
   opacity: .8;
   transition: all 0.2s ease;
