chore(deps): bump dependencies

--- a/pages/about/About.module.scss
+++ b/pages/about/About.module.scss
@@ -18,7 +18,7 @@
       &:first-child {
         padding-top: 2.3424em !important;
       }introQuote
-      &::last-child {
+      &:last-child {
         padding-top: 4.6848em !important;
       }
     }
